--- a/environment_dl.yml
+++ b/environment_dl.yml
@@ -41,10 +41,6 @@ dependencies:
   - setuptools=46.1.3=py36_0
   - six=1.14.0=py36_0
   - sqlite=3.31.1=h5c1f38d_1
-  - tensorboard=2.0.0=pyhb38c66f_1
-  - tensorflow=2.0.0=mkl_py36ha38f243_0
-  - tensorflow-base=2.0.0=mkl_py36h66b1bf0_0
-  - tensorflow-estimator=2.0.0=pyh2649769_0
   - termcolor=1.1.0=py36_1
   - tk=8.6.8=ha441bb4_0
   - werkzeug=1.0.1=py_0
@@ -53,6 +49,7 @@ dependencies:
   - xz=5.2.5=h1de35cc_0
   - zlib=1.2.11=h1de35cc_3
   - pip:
+    - tensorflow==2.1.0
     - box2d-py==2.3.8
     - cloudpickle==1.3.0
     - future==0.18.2
