--- a/conda_env_CUDA.yml
+++ b/conda_env_CUDA.yml
@@ -11,6 +11,7 @@ dependencies:
   - six=1.14.0
   - sqlite=3.31.1
   - zlib=1.2.11
+  - tqdm=4.46.0
   - pip:
     - box2d-py==2.3.8
     - gym==0.17.1
