--- a/conda_env_CUDA.yml
+++ b/conda_env_CUDA.yml
@@ -12,6 +12,7 @@ dependencies:
   - sqlite=3.31.1
   - zlib=1.2.11
   - tqdm=4.46.0
+  - matplotlib=3.1.3
   - pip:
     - box2d-py==2.3.8
     - gym==0.17.1
